[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lunaflux"
version = "0.1.0"
description = "On-chain market cycle engine — 5 signals into one luna_index with 4 market phases"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "lunafluxdev", email = "lunafluxdev@users.noreply.github.com" },
]
requires-python = ">=3.10"
keywords = ["crypto", "on-chain", "market-cycle", "signals", "defi", "whale"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://github.com/lunafluxdev/LunaFlux"
Repository = "https://github.com/lunafluxdev/LunaFlux"

[tool.setuptools.packages.find]
where = ["."]
include = ["lunaflux*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]